[package]
name = "actix-web"
version = "0.1.0"
authors = ["woodsmur <woodsmur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"
quote = "=1.0.2"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
